# mind_snag

./: Auto_Stitching_V2.m  CLAUDE.md  LICENSE  README.md  pipeline_KS4.m  project_analysis.md  setup.m
mind_snag_py/: LICENSE  README.md  pyproject.toml
mind_snag_py/config/: example_config.yaml  example_config_custom_lab.yaml
mind_snag_py/docs/: data_format.md  migration_guide.md
mind_snag_py/src/mind_snag/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  types.py
mind_snag_py/src/mind_snag/analysis/: __init__.py  extract_rasters.py
mind_snag_py/src/mind_snag/curation/: __init__.py  compute_isolation.py  extract_isolated_units.py  si_quality_metrics.py
mind_snag_py/src/mind_snag/io/: __init__.py  cluster_groups.py  converter.py  hdf5_writer.py  ks_loader.py  mat_reader.py  params_py_loader.py  si_adapter.py
mind_snag_py/src/mind_snag/sorting/: __init__.py  extract_spikes.py  run_kilosort4.py
mind_snag_py/src/mind_snag/stitching/: __init__.py  backends.py  save_stitch_results.py  stitch_neurons.py  unitmatch_adapter.py
mind_snag_py/src/mind_snag/utils/: psth.py  (+5 more)
mind_snag_py/tests/: conftest.py  test_config.py  test_paths_config.py  test_si_adapter.py  test_stitch_backends.py  test_stitch_enriched.py  test_unitmatch_adapter.py
mind_snag_py/tests/test_io/: test_cluster_groups.py  test_hdf5_writer.py  test_ks_loader.py  test_params_py_loader.py
mind_snag_py/tests/test_sorting/: test_extract_spikes.py
mind_snag_py/tests/test_stitching/: test_stitch_neurons.py
mind_snag_py/tests/test_utils/: test_paths.py  test_psth.py  test_sorting_utils.py
(+46 files in other folders)
