[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mind-snag"
version = "2.0.0"
description = "Neuropixel spike sorting, curation, and cross-recording neuron stitching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pesaran Lab", email = "pesaranlab@nyu.edu" },
]
keywords = ["neuroscience", "neuropixel", "spike-sorting", "kilosort"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "kilosort>=4.0.20",
    "cmcrameri>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mind-snag = "mind_snag.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mind_snag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
